# cognite-sdk-python

./: .pre-commit-config.yaml  .readthedocs.yaml  =0.28  CONTRIBUTING.md  MIGRATION_COMPLETE_REPORT.md  MIGRATION_STATUS.md  README.md  continue_migration.py  landscape_analysis.py  landscape_image_analysis.md  landscape_image_analysis_guide.md  poetry-to-uv-migration-analysis.md  poetry-uv-investigation-report.md  pyproject.toml  requests_to_httpx_migration_summary.md
.devcontainer/: README.md  devcontainer.json  postCreateCommand.sh
.github/actions/setup/: action.yml
.github/workflows/: build.yml  release.yaml  verify-jupyter.yml  verify-streamlit.yml
cognite/client/: _api_client.py  _cognite_client.py  _http_client.py
cognite/client/_api/: geospatial.py
cognite/client/data_classes/: contextualization.py
cognite/client/utils/: _pyodide_helpers.py  _version_checker.py
docs/source/: extensions_and_optional_dependencies.rst
scripts/: update_proto_files.py
