[project]
name = "cognite-sdk"
version = "7.76.0"
description = "Cognite Python SDK"
authors = [
    { name = "Erlend Vollset", email = "erlend.vollset@cognite.com" },
    { name = "Håkon Treider", email = "hakon.treider@cognite.com" },
    { name = "Anders Albert", email = "anders.albert@cognite.com" },
]
requires-python = ">=3.10"
readme = "README.md"
license = "Apache-2.0"
dependencies = [
    "requests~=2.27",
    "requests_oauthlib>=1,<2",
    "msal~=1.31",
    "protobuf>=4",
    "packaging>=20",
    "typing_extensions>= 4",
]

[project.optional-dependencies]
pandas = ["pandas>=2.1"]
numpy = ["numpy>=1.25"]
geo = [
    "geopandas>=0.14",
    "shapely>=1.7.0",
]
sympy = ["sympy"]
functions = ["pip>=20.0.0"]
yaml = ["PyYAML~=6.0"]
pyodide = [
    "pyodide-http>=0.2.1,<0.3",
    "tzdata>=2024.1 ; platform_system == 'Windows' or platform_system == 'Emscripten'",
]
all = [
    "numpy>=1.25",
    "pandas>=2.1",
    "geopandas>=0.14",
    "shapely>=1.7.0",
    "sympy",
    "pip>=20.0.0",
    "PyYAML~=6.0",
]

[project.urls]
Documentation = "https://cognite-sdk-python.readthedocs-hosted.com"

[dependency-groups]
dev = [
    "docutils==0.15.2",
    "sphinx>=5.0.1,<6",
    "sphinx-rtd-theme>=1.0.0",
    "pytest>=7",
    "pytest-cov>=3",
    "pytest-rerunfailures>=10",
    "pytest-asyncio>=0.23.5a0",
    "pytest-xdist>=2",
    "twine>=4.0.1",
    "pre-commit>=3,<4",
    "responses<0.25.5",
    "toml>=0,<1",
    "python-dotenv>=1,<2",
    "mypy>=1,<2",
    "types-urllib3>=1.26.16,<2",
    "types-requests>=2.28.1,<3",
    "pep8-naming>=0,<1",
    "types-backports>=0,<1",
    "types-protobuf>=4.22.0.2,<5",
    "types-PyYAML>=6,<7",
    "packaging>=23",
    "IPython>=7.0.0",
    "PyYAML~=6.0",
    "pytest-icdiff",
    "types-simplejson>=3.19.0.20240801,<4",
    "types-pytz>=2025.2.0.20250516,<2026",
]

[tool.ruff.lint.per-file-ignores]
# let scripts use print statements
"scripts/*" = ["T201"]

[tool.hatch.build.targets.sdist]
include = ["./cognite"]

[tool.hatch.build.targets.wheel]
include = ["./cognite"]

[tool.hatch.build.targets.wheel.sources]
"./cognite" = "cognite"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
